--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
 dependencies {
     implementation 'org.jetbrains:annotations:24.0.0'
     implementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
     implementation 'com.codeborne:selenide:6.16.0'
 
     testImplementation (
